=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Return zero row count instead of an exception if update by id
   doesn't match any document

 - Fixed an issue in the ``sys.shards`` table which caused an
   exception when the select limit was lower then the number of
   matching shards on a node.

 - Fixed type conversion of bulk parameters

 - Updated crate-admin to version 0.11.2 which includes following changes:

    - removed usage of sys expressions in wrong context

    - fixed a template rendering issue in cluster view in Safari

    - de-register watches to decrease DOM updates and improve performance in cluster view

    - fixed title of `tables` view if no tables exists or connection is down

 - fix: throw correct exception if `_version` is misused in WHERE clause

 - improved speed of Alter table settings in partitioned tables

 - Restricted allowed characters in column names

 - Fix: Return zero row count instead of an exception if update by id
   doesn't match any document

 - fix: throw correct exception if one uses `_version` in a select statements
   where clause

 - Fixed an issue that could cause bulk inserts to get stalled.

2014/12/16 0.45.6
=================

 - Fix: Improve Error messages on COPY TO and COPY FROM

 - Fix: correctly plan group by queries using HAVING clause

 - Fix: Added comments to the logging.yml config file and reduced the
   amount of log entries by changing the loglevel of some log messages

 - Fix: Using CLUSTERED BY Column in PARTITIONED BY clause threw
   misleading exception

 - Fix: Inserting arrays with a null value at first position
   failed

 - Fix: Nested Columns of ignored objects where exported
   as `null` values when using COPY TO

 - improved speed of bulk inserts in partitioned tables to avoid request
   timeouts

 - Fix: The clustered-by columns could be updated if they were nested.

 - Fix: Fixed an edge case where group by queries on system tables or