@@ -38,6 +38,7 @@ import org.junit.rules.ExpectedException;
 
 import static org.hamcrest.Matchers.greaterThan;
 import static org.junit.Assert.*;
+import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
 
 public class SysShardsTest extends ClassLifecycleIntegrationTest {
@@ -273,6 +274,14 @@ public class SysShardsTest extends ClassLifecycleIntegrationTest {
         SQLResponse response = transportExecutor.exec(
             "select sum(num_docs) from sys.shards where lol='funky'");
         assertEquals(1, response.rowCount()); // global aggregate always returns one row
+    }
+
+    @Test
+    public void testSelectWithOrderByColumnNotInOutputs() throws Exception {
+        // regression test... query failed with ArrayOutOfBoundsException due to inputColumn mangling in planner
+        SQLResponse response = transportExecutor.exec("select id from sys.shards order by table_name limit 1");
+        assertThat(response.rowCount(), is(1L));
+        assertThat(response.rows()[0][0], instanceOf(Integer.class));
     }
 
     @Test
